Ass5/parser.output
Terminals which are not used

   COMMENT
   CHSIGN
   SIZEOF


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 68 conflicts: 2 reduce/reduce
State 167 conflicts: 2 shift/reduce
State 169 conflicts: 1 shift/reduce
State 232 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl
    6     | error

    7 varDecl: typeSpec varDeclList SEMICOLON
    8        | error varDeclList SEMICOLON
    9        | typeSpec error SEMICOLON

   10 scopedVarDecl: STATIC typeSpec varDeclList SEMICOLON
   11              | typeSpec varDeclList SEMICOLON

   12 varDeclList: varDeclList COMMA varDeclInit
   13            | varDeclInit
   14            | error
   15            | varDeclList COMMA error

   16 varDeclInit: varDeclId
   17            | varDeclId COLON simpleExp
   18            | error COLON simpleExp

   19 varDeclId: ID
   20          | ID LB NUMCONST RB
   21          | ID LB error
   22          | error RB

   23 typeSpec: INT
   24         | BOOL
   25         | CHAR

   26 funDecl: typeSpec ID LP parms RP stmt
   27        | ID LP parms RP stmt
   28        | typeSpec error
   29        | typeSpec ID LP error
   30        | ID LP error
   31        | ID LP parms RP error

   32 parms: parmList
   33      | /* empty */

   34 parmList: parmList SEMICOLON parmTypeList
   35         | parmTypeList
   36         | parmList SEMICOLON error
   37         | error SEMICOLON parmTypeList

   38 parmTypeList: typeSpec parmIdList
   39             | typeSpec error

   40 parmIdList: parmIdList COMMA parmId
   41           | parmId
   42           | parmIdList COMMA error
   43           | error

   44 parmId: ID
   45       | ID LB RB

   46 stmt: matched
   47     | unmatched

   48 matched: expStmt
   49        | compoundStmt
   50        | returnStmt
   51        | breakStmt
   52        | matchedselectStmt
   53        | matchediterStmt
   54        | IF error
   55        | IF error ELSE matched
   56        | IF error THEN matched ELSE matched
   57        | WHILE error DO matched
   58        | WHILE error
   59        | FOR ID ASS error DO matched
   60        | FOR error

   61 unmatched: unmatchedselectStmt
   62          | unmatchediterStmt
   63          | IF error THEN stmt
   64          | IF error THEN matched ELSE unmatched

   65 expStmt: exp SEMICOLON
   66        | error SEMICOLON

   67 compoundStmt: LCB localDecls stmtList RCB

   68 localDecls: localDecls scopedVarDecl
   69           | /* empty */

   70 stmtList: stmtList stmt
   71         | /* empty */

   72 matchedselectStmt: IF simpleExp THEN matched ELSE matched

   73 unmatchedselectStmt: IF simpleExp THEN stmt
   74                    | IF simpleExp THEN matched ELSE unmatched

   75 matchediterStmt: WHILE simpleExp DO matched
   76                | FOR ID ASS iterrange DO matched

   77 unmatchediterStmt: WHILE simpleExp DO unmatched
   78                  | FOR ID ASS iterrange DO unmatched

   79 iterrange: simpleExp TO simpleExp
   80          | simpleExp TO simpleExp BY simpleExp
   81          | simpleExp TO error
   82          | error BY error
   83          | simpleExp TO simpleExp BY error

   84 returnStmt: RETURN SEMICOLON
   85           | RETURN exp SEMICOLON
   86           | RETURN error SEMICOLON

   87 breakStmt: BREAK SEMICOLON

   88 exp: mutable ASS exp
   89    | mutable ADDASS exp
   90    | mutable SUBASS exp
   91    | mutable MULASS exp
   92    | mutable DIVASS exp
   93    | error ASS exp
   94    | error ADDASS exp
   95    | error SUBASS exp
   96    | error MULASS exp
   97    | error DIVASS exp
   98    | mutable ASS error
   99    | mutable ADDASS error
  100    | mutable SUBASS error
  101    | mutable MULASS error
  102    | mutable DIVASS error
  103    | mutable INC
  104    | mutable DEC
  105    | error INC
  106    | error DEC
  107    | simpleExp

  108 simpleExp: simpleExp OR andExp
  109          | andExp
  110          | simpleExp OR error

  111 andExp: andExp AND unaryRelExp
  112       | unaryRelExp
  113       | andExp AND error

  114 unaryRelExp: NOT unaryRelExp
  115            | relExp
  116            | NOT error

  117 relExp: minmaxExp relop minmaxExp
  118       | minmaxExp
  119       | minmaxExp relop error

  120 relop: LEQ
  121      | LT
  122      | GT
  123      | GEQ
  124      | EQ
  125      | NEQ

  126 minmaxExp: minmaxExp minmaxop sumExp
  127          | sumExp

  128 minmaxop: MAX
  129         | MIN

  130 sumExp: sumExp sumop mulExp
  131       | mulExp
  132       | sumExp sumop error

  133 sumop: ADD
  134      | SUB

  135 mulExp: mulExp mulop unaryExp
  136       | unaryExp
  137       | mulExp mulop error

  138 mulop: MUL
  139      | DIV
  140      | MOD

  141 unaryExp: unaryop unaryExp
  142         | factor
  143         | unaryop error

  144 unaryop: SUB
  145        | MUL
  146        | RAND

  147 factor: immutable
  148       | mutable

  149 mutable: ID
  150        | ID LB exp RB

  151 immutable: LP exp RP
  152          | call
  153          | constant
  154          | LP error

  155 call: ID LP args RP
  156     | error LP

  157 args: argList
  158     | /* empty */

  159 argList: argList COMMA exp
  160        | exp
  161        | argList COMMA error

  162 constant: NUMCONST
  163         | CHARCONST
  164         | STRINGCONST
  165         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256) 6 8 9 14 15 18 21 22 28 29 30 31 36 37 39 42 43 54 55 56
    57 58 59 60 63 64 66 81 82 83 86 93 94 95 96 97 98 99 100 101 102
    105 106 110 113 116 119 132 137 143 154 156 161
BOOLCONST (258) 165
NUMCONST (259) 20 162
CHARCONST (260) 163
STRINGCONST (261) 164
ID (262) 19 20 21 26 27 29 30 31 44 45 59 76 78 149 150 155
THEN (263) 56 63 64 72 73 74
IF (264) 54 55 56 63 64 72 73 74
WHILE (265) 57 58 75 77
FOR (266) 59 60 76 78
STATIC (267) 10
INT (268) 23
BOOL (269) 24
CHAR (270) 25
ELSE (271) 55 56 64 72 74
RETURN (272) 84 85 86
BREAK (273) 87
COMMENT (274)
EQ (275) 124
ADDASS (276) 89 94 99
SUBASS (277) 90 95 100
DIVASS (278) 92 97 102
MULASS (279) 91 96 101
LEQ (280) 120
GEQ (281) 123
NEQ (282) 125
DEC (283) 104 106
INC (284) 103 105
LT (285) 121
GT (286) 122
MAX (287) 128
MIN (288) 129
ADD (289) 133
DIV (290) 139
DO (291) 57 59 75 76 77 78
BY (292) 80 82 83
TO (293) 79 80 81 83
MOD (294) 140
RAND (295) 146
SUB (296) 134 144
MUL (297) 138 145
CHSIGN (298)
SIZEOF (299)
AND (300) 111 113
OR (301) 108 110
NOT (302) 114 116
ASS (303) 59 76 78 88 93 98
SEMICOLON (304) 7 8 9 10 11 34 36 37 65 66 84 85 86 87
COLON (305) 17 18
LP (306) 26 27 29 30 31 151 154 155 156
RP (307) 26 27 31 151 155
LB (308) 20 21 45 150
RB (309) 20 22 45 150
COMMA (310) 12 15 40 42 159 161
LCB (311) 67
RCB (312) 67


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
declList (60)
    on left: 2 3, on right: 1 2
decl (61)
    on left: 4 5 6, on right: 2 3
varDecl (62)
    on left: 7 8 9, on right: 4
scopedVarDecl (63)
    on left: 10 11, on right: 68
varDeclList (64)
    on left: 12 13 14 15, on right: 7 8 10 11 12 15
varDeclInit (65)
    on left: 16 17 18, on right: 12 13
varDeclId (66)
    on left: 19 20 21 22, on right: 16 17
typeSpec (67)
    on left: 23 24 25, on right: 7 9 10 11 26 28 29 38 39
funDecl (68)
    on left: 26 27 28 29 30 31, on right: 5
parms (69)
    on left: 32 33, on right: 26 27 31
parmList (70)
    on left: 34 35 36 37, on right: 32 34 36
parmTypeList (71)
    on left: 38 39, on right: 34 35 37
parmIdList (72)
    on left: 40 41 42 43, on right: 38 40 42
parmId (73)
    on left: 44 45, on right: 40 41
stmt (74)
    on left: 46 47, on right: 26 27 63 70 73
matched (75)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60,
    on right: 46 55 56 57 59 64 72 74 75 76
unmatched (76)
    on left: 61 62 63 64, on right: 47 64 74 77 78
expStmt (77)
    on left: 65 66, on right: 48
compoundStmt (78)
    on left: 67, on right: 49
localDecls (79)
    on left: 68 69, on right: 67 68
stmtList (80)
    on left: 70 71, on right: 67 70
matchedselectStmt (81)
    on left: 72, on right: 52
unmatchedselectStmt (82)
    on left: 73 74, on right: 61
matchediterStmt (83)
    on left: 75 76, on right: 53
unmatchediterStmt (84)
    on left: 77 78, on right: 62
iterrange (85)
    on left: 79 80 81 82 83, on right: 76 78
returnStmt (86)
    on left: 84 85 86, on right: 50
breakStmt (87)
    on left: 87, on right: 51
exp (88)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107, on right: 65 85 88 89 90 91 92 93 94 95 96 97 150
    151 159 160
simpleExp (89)
    on left: 108 109 110, on right: 17 18 72 73 74 75 77 79 80 81 83
    107 108 110
andExp (90)
    on left: 111 112 113, on right: 108 109 111 113
unaryRelExp (91)
    on left: 114 115 116, on right: 111 112 114
relExp (92)
    on left: 117 118 119, on right: 115
relop (93)
    on left: 120 121 122 123 124 125, on right: 117 119
minmaxExp (94)
    on left: 126 127, on right: 117 118 119 126
minmaxop (95)
    on left: 128 129, on right: 126
sumExp (96)
    on left: 130 131 132, on right: 126 127 130 132
sumop (97)
    on left: 133 134, on right: 130 132
mulExp (98)
    on left: 135 136 137, on right: 130 131 135 137
mulop (99)
    on left: 138 139 140, on right: 135 137
unaryExp (100)
    on left: 141 142 143, on right: 135 136 141
unaryop (101)
    on left: 144 145 146, on right: 141 143
factor (102)
    on left: 147 148, on right: 142
mutable (103)
    on left: 149 150, on right: 88 89 90 91 92 98 99 100 101 102 103
    104 148
immutable (104)
    on left: 151 152 153 154, on right: 147
call (105)
    on left: 155 156, on right: 152
args (106)
    on left: 157 158, on right: 155
argList (107)
    on left: 159 160 161, on right: 157 159 161
constant (108)
    on left: 162 163 164 165, on right: 153


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program   go to state 6
    declList  go to state 7
    decl      go to state 8
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


state 1

    6 decl: error .
    8 varDecl: error . varDeclList SEMICOLON

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (decl)
    error  [reduce using rule 6 (decl)]
    ID     [reduce using rule 6 (decl)]
    INT    reduce using rule 6 (decl)
    BOOL   reduce using rule 6 (decl)
    CHAR   reduce using rule 6 (decl)

    varDeclList  go to state 14
    varDeclInit  go to state 15
    varDeclId    go to state 16


state 2

   27 funDecl: ID . LP parms RP stmt
   30        | ID . LP error
   31        | ID . LP parms RP error

    LP  shift, and go to state 17


state 3

   23 typeSpec: INT .

    $default  reduce using rule 23 (typeSpec)


state 4

   24 typeSpec: BOOL .

    $default  reduce using rule 24 (typeSpec)


state 5

   25 typeSpec: CHAR .

    $default  reduce using rule 25 (typeSpec)


state 6

    0 $accept: program . $end

    $end  shift, and go to state 18


state 7

    1 program: declList .
    2 declList: declList . decl

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl      go to state 19
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


state 8

    3 declList: decl .

    $default  reduce using rule 3 (declList)


state 9

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


state 10

    7 varDecl: typeSpec . varDeclList SEMICOLON
    9        | typeSpec . error SEMICOLON
   26 funDecl: typeSpec . ID LP parms RP stmt
   28        | typeSpec . error
   29        | typeSpec . ID LP error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList  go to state 22
    varDeclInit  go to state 15
    varDeclId    go to state 16


state 11

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


state 12

   14 varDeclList: error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RB

    COLON  shift, and go to state 23
    RB     shift, and go to state 24

    $default  reduce using rule 14 (varDeclList)


state 13

   19 varDeclId: ID .
   20          | ID . LB NUMCONST RB
   21          | ID . LB error

    LB  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


state 14

    8 varDecl: error varDeclList . SEMICOLON
   12 varDeclList: varDeclList . COMMA varDeclInit
   15            | varDeclList . COMMA error

    SEMICOLON  shift, and go to state 26
    COMMA      shift, and go to state 27


state 15

   13 varDeclList: varDeclInit .

    $default  reduce using rule 13 (varDeclList)


state 16

   16 varDeclInit: varDeclId .
   17            | varDeclId . COLON simpleExp

    COLON  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInit)


state 17

   27 funDecl: ID LP . parms RP stmt
   30        | ID LP . error
   31        | ID LP . parms RP error

    error  shift, and go to state 29
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RP  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 31
    parmList      go to state 32
    parmTypeList  go to state 33


state 18

    0 $accept: program $end .

    $default  accept


state 19

    2 declList: declList decl .

    $default  reduce using rule 2 (declList)


state 20

    9 varDecl: typeSpec error . SEMICOLON
   14 varDeclList: error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RB
   28 funDecl: typeSpec error .

    SEMICOLON  shift, and go to state 34
    COLON      shift, and go to state 23
    RB         shift, and go to state 24

    SEMICOLON  [reduce using rule 14 (varDeclList)]
    COMMA      reduce using rule 14 (varDeclList)
    $default   reduce using rule 28 (funDecl)


state 21

   19 varDeclId: ID .
   20          | ID . LB NUMCONST RB
   21          | ID . LB error
   26 funDecl: typeSpec ID . LP parms RP stmt
   29        | typeSpec ID . LP error

    LP  shift, and go to state 35
    LB  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


state 22

    7 varDecl: typeSpec varDeclList . SEMICOLON
   12 varDeclList: varDeclList . COMMA varDeclInit
   15            | varDeclList . COMMA error

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 27


state 23

   18 varDeclInit: error COLON . simpleExp

    error        shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 24

   22 varDeclId: error RB .

    $default  reduce using rule 22 (varDeclId)


state 25

   20 varDeclId: ID LB . NUMCONST RB
   21          | ID LB . error

    error     shift, and go to state 62
    NUMCONST  shift, and go to state 63


state 26

    8 varDecl: error varDeclList SEMICOLON .

    $default  reduce using rule 8 (varDecl)


state 27

   12 varDeclList: varDeclList COMMA . varDeclInit
   15            | varDeclList COMMA . error

    error  shift, and go to state 64
    ID     shift, and go to state 13

    varDeclInit  go to state 65
    varDeclId    go to state 16


state 28

   17 varDeclInit: varDeclId COLON . simpleExp

    error        shift, and go to state 37
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    simpleExp    go to state 66
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 29

   30 funDecl: ID LP error .
   37 parmList: error . SEMICOLON parmTypeList

    SEMICOLON  shift, and go to state 67

    $default  reduce using rule 30 (funDecl)


state 30

   38 parmTypeList: typeSpec . parmIdList
   39             | typeSpec . error

    error  shift, and go to state 68
    ID     shift, and go to state 69

    parmIdList  go to state 70
    parmId      go to state 71


state 31

   27 funDecl: ID LP parms . RP stmt
   31        | ID LP parms . RP error

    RP  shift, and go to state 72


state 32

   32 parms: parmList .
   34 parmList: parmList . SEMICOLON parmTypeList
   36         | parmList . SEMICOLON error

    SEMICOLON  shift, and go to state 73

    $default  reduce using rule 32 (parms)


state 33

   35 parmList: parmTypeList .

    $default  reduce using rule 35 (parmList)


state 34

    9 varDecl: typeSpec error SEMICOLON .

    $default  reduce using rule 9 (varDecl)


state 35

   26 funDecl: typeSpec ID LP . parms RP stmt
   29        | typeSpec ID LP . error

    error  shift, and go to state 74
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    RP  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 75
    parmList      go to state 32
    parmTypeList  go to state 33


state 36

    7 varDecl: typeSpec varDeclList SEMICOLON .

    $default  reduce using rule 7 (varDecl)


state 37

  156 call: error . LP

    LP  shift, and go to state 76


state 38

  165 constant: BOOLCONST .

    $default  reduce using rule 165 (constant)


state 39

  162 constant: NUMCONST .

    $default  reduce using rule 162 (constant)


state 40

  163 constant: CHARCONST .

    $default  reduce using rule 163 (constant)


state 41

  164 constant: STRINGCONST .

    $default  reduce using rule 164 (constant)


state 42

  149 mutable: ID .
  150        | ID . LB exp RB
  155 call: ID . LP args RP

    LP  shift, and go to state 77
    LB  shift, and go to state 78

    $default  reduce using rule 149 (mutable)


state 43

  146 unaryop: RAND .

    $default  reduce using rule 146 (unaryop)


state 44

  144 unaryop: SUB .

    $default  reduce using rule 144 (unaryop)


state 45

  145 unaryop: MUL .

    $default  reduce using rule 145 (unaryop)


state 46

  114 unaryRelExp: NOT . unaryRelExp
  116            | NOT . error

    error        shift, and go to state 79
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    unaryRelExp  go to state 80
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 47

  151 immutable: LP . exp RP
  154          | LP . error

    error        shift, and go to state 81
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    exp          go to state 82
    simpleExp    go to state 83
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 84
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 48

   18 varDeclInit: error COLON simpleExp .
  108 simpleExp: simpleExp . OR andExp
  110          | simpleExp . OR error

    OR  shift, and go to state 85

    $default  reduce using rule 18 (varDeclInit)


state 49

  109 simpleExp: andExp .
  111 andExp: andExp . AND unaryRelExp
  113       | andExp . AND error

    AND  shift, and go to state 86

    $default  reduce using rule 109 (simpleExp)


state 50

  112 andExp: unaryRelExp .

    $default  reduce using rule 112 (andExp)


state 51

  115 unaryRelExp: relExp .

    $default  reduce using rule 115 (unaryRelExp)


state 52

  117 relExp: minmaxExp . relop minmaxExp
  118       | minmaxExp .
  119       | minmaxExp . relop error
  126 minmaxExp: minmaxExp . minmaxop sumExp

    EQ   shift, and go to state 87
    LEQ  shift, and go to state 88
    GEQ  shift, and go to state 89
    NEQ  shift, and go to state 90
    LT   shift, and go to state 91
    GT   shift, and go to state 92
    MAX  shift, and go to state 93
    MIN  shift, and go to state 94

    $default  reduce using rule 118 (relExp)

    relop     go to state 95
    minmaxop  go to state 96


state 53

  127 minmaxExp: sumExp .
  130 sumExp: sumExp . sumop mulExp
  132       | sumExp . sumop error

    ADD  shift, and go to state 97
    SUB  shift, and go to state 98

    $default  reduce using rule 127 (minmaxExp)

    sumop  go to state 99


state 54

  131 sumExp: mulExp .
  135 mulExp: mulExp . mulop unaryExp
  137       | mulExp . mulop error

    DIV  shift, and go to state 100
    MOD  shift, and go to state 101
    MUL  shift, and go to state 102

    $default  reduce using rule 131 (sumExp)

    mulop  go to state 103


state 55

  136 mulExp: unaryExp .

    $default  reduce using rule 136 (mulExp)


state 56

  141 unaryExp: unaryop . unaryExp
  143         | unaryop . error

    error        shift, and go to state 104
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    LP           shift, and go to state 47

    unaryExp   go to state 105
    unaryop    go to state 56
    factor     go to state 57
    mutable    go to state 58
    immutable  go to state 59
    call       go to state 60
    constant   go to state 61


state 57

  142 unaryExp: factor .

    $default  reduce using rule 142 (unaryExp)


state 58

  148 factor: mutable .

    $default  reduce using rule 148 (factor)


state 59

  147 factor: immutable .

    $default  reduce using rule 147 (factor)


state 60

  152 immutable: call .

    $default  reduce using rule 152 (immutable)


state 61

  153 immutable: constant .

    $default  reduce using rule 153 (immutable)


state 62

   21 varDeclId: ID LB error .

    $default  reduce using rule 21 (varDeclId)


state 63

   20 varDeclId: ID LB NUMCONST . RB

    RB  shift, and go to state 106


state 64

   15 varDeclList: varDeclList COMMA error .
   18 varDeclInit: error . COLON simpleExp
   22 varDeclId: error . RB

    COLON  shift, and go to state 23
    RB     shift, and go to state 24

    $default  reduce using rule 15 (varDeclList)


state 65

   12 varDeclList: varDeclList COMMA varDeclInit .

    $default  reduce using rule 12 (varDeclList)


state 66

   17 varDeclInit: varDeclId COLON simpleExp .
  108 simpleExp: simpleExp . OR andExp
  110          | simpleExp . OR error

    OR  shift, and go to state 85

    $default  reduce using rule 17 (varDeclInit)


state 67

   37 parmList: error SEMICOLON . parmTypeList

    INT   shift, and go to state 3
    BOOL  shift, and go to state 4
    CHAR  shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 107


state 68

   39 parmTypeList: typeSpec error .
   43 parmIdList: error .

    SEMICOLON  reduce using rule 39 (parmTypeList)
    SEMICOLON  [reduce using rule 43 (parmIdList)]
    RP         reduce using rule 39 (parmTypeList)
    RP         [reduce using rule 43 (parmIdList)]
    COMMA      reduce using rule 43 (parmIdList)
    $default   reduce using rule 39 (parmTypeList)


state 69

   44 parmId: ID .
   45       | ID . LB RB

    LB  shift, and go to state 108

    $default  reduce using rule 44 (parmId)


state 70

   38 parmTypeList: typeSpec parmIdList .
   40 parmIdList: parmIdList . COMMA parmId
   42           | parmIdList . COMMA error

    COMMA  shift, and go to state 109

    $default  reduce using rule 38 (parmTypeList)


state 71

   41 parmIdList: parmId .

    $default  reduce using rule 41 (parmIdList)


state 72

   27 funDecl: ID LP parms RP . stmt
   31        | ID LP parms RP . error

    error        shift, and go to state 110
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    IF           shift, and go to state 111
    WHILE        shift, and go to state 112
    FOR          shift, and go to state 113
    RETURN       shift, and go to state 114
    BREAK        shift, and go to state 115
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47
    LCB          shift, and go to state 116

    stmt                 go to state 117
    matched              go to state 118
    unmatched            go to state 119
    expStmt              go to state 120
    compoundStmt         go to state 121
    matchedselectStmt    go to state 122
    unmatchedselectStmt  go to state 123
    matchediterStmt      go to state 124
    unmatchediterStmt    go to state 125
    returnStmt           go to state 126
    breakStmt            go to state 127
    exp                  go to state 128
    simpleExp            go to state 83
    andExp               go to state 49
    unaryRelExp          go to state 50
    relExp               go to state 51
    minmaxExp            go to state 52
    sumExp               go to state 53
    mulExp               go to state 54
    unaryExp             go to state 55
    unaryop              go to state 56
    factor               go to state 57
    mutable              go to state 84
    immutable            go to state 59
    call                 go to state 60
    constant             go to state 61


state 73

   34 parmList: parmList SEMICOLON . parmTypeList
   36         | parmList SEMICOLON . error

    error  shift, and go to state 129
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 130


state 74

   29 funDecl: typeSpec ID LP error .
   37 parmList: error . SEMICOLON parmTypeList

    SEMICOLON  shift, and go to state 67

    $default  reduce using rule 29 (funDecl)


state 75

   26 funDecl: typeSpec ID LP parms . RP stmt

    RP  shift, and go to state 131


state 76

  156 call: error LP .

    $default  reduce using rule 156 (call)


state 77

  155 call: ID LP . args RP

    error        shift, and go to state 132
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    RP  reduce using rule 158 (args)

    exp          go to state 133
    simpleExp    go to state 83
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 84
    immutable    go to state 59
    call         go to state 60
    args         go to state 134
    argList      go to state 135
    constant     go to state 61


state 78

  150 mutable: ID LB . exp RB

    error        shift, and go to state 132
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    exp          go to state 136
    simpleExp    go to state 83
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 84
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 79

  116 unaryRelExp: NOT error .
  156 call: error . LP

    LP  shift, and go to state 76

    $default  reduce using rule 116 (unaryRelExp)


state 80

  114 unaryRelExp: NOT unaryRelExp .

    $default  reduce using rule 114 (unaryRelExp)


state 81

   93 exp: error . ASS exp
   94    | error . ADDASS exp
   95    | error . SUBASS exp
   96    | error . MULASS exp
   97    | error . DIVASS exp
  105    | error . INC
  106    | error . DEC
  154 immutable: LP error .
  156 call: error . LP

    ADDASS  shift, and go to state 137
    SUBASS  shift, and go to state 138
    DIVASS  shift, and go to state 139
    MULASS  shift, and go to state 140
    DEC     shift, and go to state 141
    INC     shift, and go to state 142
    ASS     shift, and go to state 143
    LP      shift, and go to state 76

    $default  reduce using rule 154 (immutable)


state 82

  151 immutable: LP exp . RP

    RP  shift, and go to state 144


state 83

  107 exp: simpleExp .
  108 simpleExp: simpleExp . OR andExp
  110          | simpleExp . OR error

    OR  shift, and go to state 85

    $default  reduce using rule 107 (exp)


state 84

   88 exp: mutable . ASS exp
   89    | mutable . ADDASS exp
   90    | mutable . SUBASS exp
   91    | mutable . MULASS exp
   92    | mutable . DIVASS exp
   98    | mutable . ASS error
   99    | mutable . ADDASS error
  100    | mutable . SUBASS error
  101    | mutable . MULASS error
  102    | mutable . DIVASS error
  103    | mutable . INC
  104    | mutable . DEC
  148 factor: mutable .

    ADDASS  shift, and go to state 145
    SUBASS  shift, and go to state 146
    DIVASS  shift, and go to state 147
    MULASS  shift, and go to state 148
    DEC     shift, and go to state 149
    INC     shift, and go to state 150
    ASS     shift, and go to state 151

    $default  reduce using rule 148 (factor)


state 85

  108 simpleExp: simpleExp OR . andExp
  110          | simpleExp OR . error

    error        shift, and go to state 152
    BOOLCONST    shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ID           shift, and go to state 42
    RAND         shift, and go to state 43
    SUB          shift, and go to state 44
    MUL          shift, and go to state 45
    NOT          shift, and go to state 46
    LP           shift, and go to state 47

    andExp       go to state 153
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


state 86

  111 andExp: andExp AND . unaryRelExp
  113       | andExp AND . error
